src/test/ui/reachable/expr_call.stderr
error: unreachable expression
  --> $DIR/expr_call.rs:13:17
   |
LL |     foo(return, 22);
   |                 ^^
   |
note: lint level defined here
  --> $DIR/expr_call.rs:5:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: unreachable expression
  --> $DIR/expr_call.rs:18:5
   |
LL |     bar(return);
   |     ^^^^^^^^^^^

error: aborting due to 2 previous errors

